@@ -1,4 +1,7 @@
 === 2.x / ??
+* N Major Enhancements
+  * More extensive unit tests (special thanks to Chris Lowis).
+
 * N Minor Enhancements
   * RDoc now adds the package title to the web pages that it generates
     for files and classes/modules, which helps them appear better in
